--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.14.3",
     "toastify": "^2.0.1"
   },
   "devDependencies": {
