--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -19,7 +20,8 @@
     "react-toastify": "^10.0.6",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.14.3",
-    "toastify": "^2.0.1"
+    "toastify": "^2.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
