--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,7 @@
 {
+
   "name": "client",
+  "proxy":"https://electra-dummy.onrender.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,13 +13,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
-    "toastify": "^2.0.1"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.14.3",
+    "toastify": "^2.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
